2 fixes for EvImmUtil_5